{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 22,
  "lineage": "cc57d7ed-1cbc-fdd8-4761-746869b8abea",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "example",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08306577a6694f5e7",
            "arn": "arn:aws:ec2:us-east-1:920394549028:instance/i-046a4fadfffeeb4a0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-046a4fadfffeeb4a0",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykeypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-093360da5a0c76611",
            "private_dns": "ip-10-0-1-77.ec2.internal",
            "private_ip": "10.0.1.77",
            "public_dns": "ec2-54-224-2-111.compute-1.amazonaws.com",
            "public_ip": "54.224.2.111",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0dc0478e96df6237b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-040ea015d99b93beb",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0316f8334c0927926"
            ]
          },
          "dependencies": [
            "aws_key_pair.mykeypair",
            "aws_security_group.example-instance",
            "aws_subnet.main-public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:920394549028:internet-gateway/igw-01016ad7e21783fef",
            "id": "igw-01016ad7e21783fef",
            "owner_id": "920394549028",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-0ecf74a3cf6847391"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b7f8f3c3314430bc",
            "owner_id": "920394549028",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01016ad7e21783fef",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-public-1"
            },
            "vpc_id": "vpc-0ecf74a3cf6847391"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-1-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b3dd4ceb6d40b4da",
            "route_table_id": "rtb-0b7f8f3c3314430bc",
            "subnet_id": "subnet-040ea015d99b93beb"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-public",
            "aws_subnet.main-public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-2-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f5c9e059e065842c",
            "route_table_id": "rtb-0b7f8f3c3314430bc",
            "subnet_id": "subnet-0f1b872bcc1a1d31a"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-public",
            "aws_subnet.main-public-2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-3-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-080704463be4691b1",
            "route_table_id": "rtb-0b7f8f3c3314430bc",
            "subnet_id": "subnet-030e91c4fc465e7b7"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-public",
            "aws_subnet.main-public-3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-mariadb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:920394549028:security-group/sg-0875fd41850386f8f",
            "description": "allow-mariadb",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "id": "sg-0875fd41850386f8f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0316f8334c0927926"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "allow-mariadb",
            "name_prefix": "",
            "owner_id": "920394549028",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-mariadb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ecf74a3cf6847391"
          },
          "dependencies": [
            "aws_security_group.example-instance",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example-instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:920394549028:security-group/sg-0316f8334c0927926",
            "description": "security group that allows ssh and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0316f8334c0927926",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh",
            "name_prefix": "",
            "owner_id": "920394549028",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "example-instance"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ecf74a3cf6847391"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:920394549028:subnet/subnet-02a4b6bca6a61c092",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-02a4b6bca6a61c092",
            "map_public_ip_on_launch": false,
            "owner_id": "920394549028",
            "tags": {
              "Name": "main-private-1"
            },
            "vpc_id": "vpc-0ecf74a3cf6847391"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:920394549028:subnet/subnet-098d842142a9289a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-098d842142a9289a7",
            "map_public_ip_on_launch": false,
            "owner_id": "920394549028",
            "tags": {
              "Name": "main-private-2"
            },
            "vpc_id": "vpc-0ecf74a3cf6847391"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:920394549028:subnet/subnet-0a4870d28cf0ff8e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-0a4870d28cf0ff8e0",
            "map_public_ip_on_launch": false,
            "owner_id": "920394549028",
            "tags": {
              "Name": "main-private-3"
            },
            "vpc_id": "vpc-0ecf74a3cf6847391"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:920394549028:subnet/subnet-040ea015d99b93beb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-040ea015d99b93beb",
            "map_public_ip_on_launch": true,
            "owner_id": "920394549028",
            "tags": {
              "Name": "main-public-1"
            },
            "vpc_id": "vpc-0ecf74a3cf6847391"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:920394549028:subnet/subnet-0f1b872bcc1a1d31a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0f1b872bcc1a1d31a",
            "map_public_ip_on_launch": true,
            "owner_id": "920394549028",
            "tags": {
              "Name": "main-public-2"
            },
            "vpc_id": "vpc-0ecf74a3cf6847391"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:920394549028:subnet/subnet-030e91c4fc465e7b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-030e91c4fc465e7b7",
            "map_public_ip_on_launch": true,
            "owner_id": "920394549028",
            "tags": {
              "Name": "main-public-3"
            },
            "vpc_id": "vpc-0ecf74a3cf6847391"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:920394549028:vpc/vpc-0ecf74a3cf6847391",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ec8b0419f1d83918",
            "default_route_table_id": "rtb-05a4df80426260801",
            "default_security_group_id": "sg-05764064ce6a52273",
            "dhcp_options_id": "dopt-1c903d7a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ecf74a3cf6847391",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05a4df80426260801",
            "owner_id": "920394549028",
            "tags": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}